# dr-agent-aidsl

./: LICENSE  Makefile  README.md  main.py  pyproject.toml  ruff.toml
api/: main.py  models.py  structlogger.py
api/controllers/: query_preprocessor_controller.py  research_controller.py
scripts/: verify_api_query.py
tests/integration/: query_preprocessor.py  test_api_integration.py
tests/unit/: test_api.py
