[project]
name = "dr-agent-aidsl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.2.6",
    "arxiv>=2.3.0",
    "fastapi[standard]>=0.120.4",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
